--- a/styles/third.module.scss
+++ b/styles/third.module.scss
@@ -346,3 +346,7 @@ margin-top: 15px !important;
     max-width: 245px;
 }
 
+.valuecontent ul li img {
+    width: 14px !important;
+    padding-right: 8px !important;
+}
