--- a/scss/demo/aboutus.module.scss
+++ b/scss/demo/aboutus.module.scss
@@ -25,6 +25,15 @@ $mobile: 576px;
   color: #707070;
 }
 
+.dheading{
+  color: "white";
+  padding:0px;
+}
+
+.dpara{
+  color: "white";
+  padding:0px;
+}
 .heading {
   text-align: center;
   color: black;
