--- a/scss/contact-page/contact.module.scss
+++ b/scss/contact-page/contact.module.scss
@@ -1,4 +1,4 @@
-.omracontact{
+.omracontact {
     background-image: url("/images/eye.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -8,55 +8,61 @@
     height: 570px;
 
 }
-.omracontact strong{
+
+.omracontact strong {
     color: white;
     font-size: 45px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
-    
-    
+
+
 }
+
 .omracontact p {
     color: white;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
 }
-.omracontact1{
-    background-color: #151515
-    
 
+.omracontact1 {
+    background-color: #151515
 }
-    
-    .omracontact1 h2{
-    
+
+.omracontact1 h2 {
+
     font-size: 40px;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     margin-top: 80px;
     font-weight: 700;
 }
-.omracontact1 p{
+
+.omracontact1 p {
     color: #fff;
-    
+
     padding-top: 20px;
     font-family: 'Montserrat', sans-serif;
 }
+
 .Collection {
     background-color: #151515;
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.Collection a .a{background-image: url("/images/usaCol1.jpg") ;
-     background-repeat: no-repeat;
-     background-image: cover;
-     height: 500px;
-     
-     background-position: top;
-     
-     
+
+.Collection a .a {
+    background-image: url("/images/usaCol1.jpg");
+    background-repeat: no-repeat;
+    background-image: cover;
+    height: 500px;
+
+    background-position: top;
+
+
 }
-.Collection a p{
+
+.Collection a p {
     color: #fff;
     text-align: center;
     vertical-align: middle;
@@ -66,24 +72,28 @@
     letter-spacing: 4px;
     font-family: 'Montserrat', sans-serif;
 }
-.Collection a  div {
-background-size: 100% 100% ;
+
+.Collection a div {
+    background-size: 100% 100%;
 }
 
-.Collection a .b{background-image: url("/images/south-americaCol2.jpg") ;
+.Collection a .b {
+    background-image: url("/images/south-americaCol2.jpg");
     background-repeat: no-repeat;
     background-image: cover;
     height: 500px;
     background-position: top;
-    
+
 
 }
-.Collection a .c{background-image: url("/images/usaCol1.jpg") ;
+
+.Collection a .c {
+    background-image: url("/images/usaCol1.jpg");
     background-repeat: no-repeat;
     background-image: cover;
     height: 500px;
     background-position: top;
-    
+
 
 }
 
@@ -92,49 +102,61 @@ background-size: 100% 100% ;
         width: calc(100%/8);
     }
 }
-.Collection a .d{background-image: url("/images/south-americaCol2.jpg") ;
+
+.Collection a .d {
+    background-image: url("/images/south-americaCol2.jpg");
     background-repeat: no-repeat;
     background-image: cover;
     height: 500px;
     background-position: top;
 }
-.Collection a:hover div{
+
+.Collection a:hover div {
     display: block;
     position: relative;
-     transition: all 1s;
-     opacity: 50%;
-     height: 550px;
-     margin-top: -25px;
-     background-color:  tomato;
-    
+    transition: all 1s;
+    opacity: 50%;
+    height: 550px;
+    margin-top: -25px;
+    background-color: tomato;
+
 }
-.Collection a:hover::after{background-color: tomato;}
-.Contact  h3{
+
+.Collection a:hover::after {
+    background-color: tomato;
+}
+
+.Contact h3 {
     font-size: 50px;
     font-weight: 300;
     color: #fff;
     margin-top: 40px;
 }
- .subheading p{
+
+.subheading p {
     font-size: 16px;
     padding-bottom: 45px;
-    color: #fff;
+    color: #fff;    padding-left: 0px;
 }
+
 .Contact {
     background-color: #000;
 }
+
 .Form {
     background-color: #000;
     color: #fff;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     border-bottom: 1px solid #a3a3a3;
-    
+
 }
-.Form form{
-    display: flex;   
+
+.Form form {
+    display: flex;
 }
-.Form label #terms{
+
+.Form label #terms {
     font-size: 36px;
     font-weight: 300;
 }
@@ -144,19 +166,22 @@ background-size: 100% 100% ;
     font-weight: 300;
     font-family: 'Montserrat', sans-serif;
     margin-top: 20px;
-    margin-left: 15px;
-    }
-    .submit{
-        width:147px ;
-        height: 40px;
-        cursor: not-allowed;
-        margin-left: 15px;
-        font-size: 14px;
-        border: none;
-        font-weight: 600;
-        letter-spacing: 2px;
-        margin-bottom: 30px;
-        margin-top: 30px;
-        background-color: #8B8B8B;
-        color: #666666;
+    // margin-left: 15px;
+}
+
+.submit {
+    width: 55%;
+    height: 45px;
+    cursor: not-allowed;
+    /* margin-left: 40px; */
+    font-size: 14px;
+    border: none;
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+    margin-top: 23px;
+    background-color: #aea4a4;
+    color: #fff;
+    background-image: linear-gradient(to right, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+    border-radius: 4px;
 }
