--- a/scss/demo/blog.module.scss
+++ b/scss/demo/blog.module.scss
@@ -325,7 +325,7 @@
 
   .newsection1 {
     background-color: #0a0a0a;
-    height: 28vh;
+    height: 32vh;
   }
 
   .new_box3 {
@@ -369,7 +369,7 @@
     height: 52px;
     width: 100%;
     margin-left: 83px;
-
+    border: none;
   }
 
   .image_flex3 {
