--- a/component/tab/styles.css
+++ b/component/tab/styles.css
@@ -300,7 +300,7 @@ section.mydiv8 {
 }
 
 .box1 {
-    border: 2px solid #fff;
+    /* border: 2px solid #fff; */
     width: 105px;
     padding: 15px 18px;
     border-radius: 90px;
@@ -545,13 +545,13 @@ section.mydiv10 ul li img {
         text-align: center;
     }
 
-    .mydiv001 {
+    /* .mydiv001 {
         /* background-image: url(./image/1.png); */
 
-        padding: 200px 0px;
+        /* padding: 200px 0px;
 
         padding-left: 0;
-    }
+    } */ */
 
     section.mydiv9 h1 {
         font-size: 20px;
